# quanttide-example-of-platform

./: AGENTS.md  README.md  main.py  pyproject.toml
.quanttide/journal/: 2026-05-15.md
apps/connect-agent/: .gitignore  AGENTS.md  README.md  config.py  main.py  pyproject.toml
apps/connect-agent/app/: __init__.py  commands.py  events.py  main.py  models.py  storage.py
apps/connect-agent/app/agents/: __init__.py  consensus_agent.py  message_agent.py
apps/connect-agent/app/services/: consensus.py  message.py  relation.py
apps/connect-agent/docs/: test-cases.md  test-strategy.md
apps/connect-agent/integration_tests/: conftest.py  test_lifecycle.py
apps/connect-agent/tests/: conftest.py  test_agents.py  test_commands.py  test_main.py  test_models.py  test_storage.py
apps/think-agent/: README.md  pubspec.yaml
apps/think-agent/doc/: intent-sync-delegate.md
apps/think-agent/lib/: main.dart
apps/think-agent/linux/: CMakeLists.txt
asset-agent/docs/: brd.md  ixd.md
asset-agent/src/: index.html  index.md
docs/: asset_agent.md
docs/code-agent/: AGENTS.md  dev.md  prd.md
docs/connect-agent/: add.md  default.md  drd-events.md  drd-models.md
docs/custom-agent/: index.md
docs/opencode/: serve.md
docs/product-agent/: drd.md  index.html  index.md  ixd.md  prd.md
docs/think-agent/: default.md  dev-intent-cubit.md  user.md
examples/asset-agent/: AGENTS.md
examples/code-agent/: add.md  brd.md  dev.md  prd.md
examples/think-agent/: add.md  architecture.md  bloc.dart  bloc_test.dart  drd-state.md  drd.md  index.md  main.dart  prd.md  qa.md
(+29 files in other folders)
