[project]
name = "connect-agent"
version = "0.1.0"
description = "人机沟通共识引擎"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings-vault>=2.1.1",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: 需要 Vault 和 LLM API 的集成测试（在 integration_tests/ 目录下）",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
